# 3D-Point-cloud

./: README.md
HPC_tests/GPU/KDTree/: run.sh
HPC_tests/GPU/KDTree/FLANN_BCPD/archive/: CMakeCache.txt  CMakeLists copy.txt  CMakeLists.txt  Makefile  cmake_install.cmake  flann_example_c.c  kdtree_flann_cuda
HPC_tests/GPU/KDTree/FLANN_BCPD/archive/src/: flann_cuda_test.cu  kdtree_flann_cuda.c
HPC_tests/GPU/add/: stencil  vecAdd.c  vecAddWrapperC.cu
HPC_tests/GPU/basic/: a.out  kernel.cu  main.c  print  stencil
HPC_tests/add/: a.out  add_grid.cu
HPC_tests/lud/common/: common.c
HPC_tests/lud/omp/: a.out  gmon.out  lud.c  lud_gpu  lud_omp.c  profile.ncu-rep  profile_128.ncu-rep  report1.qdrep
HPC_tests/mat-multiplication/experiment/: mat_mul_byref  mat_mul_cpu  mat_mul_gpu_byReference  mat_mul_gpu_shared_mem
HPC_tests/notebooks/: openmp_offload_bcpd_experiments.ipynb  openmp_offload_generic_experiments.ipynb  output_comptime.txt  output_info.txt  output_y.txt
HPC_tests/practice/gpu_scalar/: add.c  add.cu
bcpd-pp-nuvoscan/: README.md  Untitled.ipynb  bcpd.py  config.py  data.json  data.txt  gmon.out  load_inputs.py  output.html
bcpd-pp-nuvoscan/.ipynb_checkpoints/: Image_analysis-checkpoint.ipynb  Untitled-checkpoint.ipynb  bcpd_plusplus-checkpoint.ipynb
bcpd-pp-nuvoscan/batch/: outlier_removal_batch.py  raw_to_txt.py
bcpd-pp-nuvoscan/notebooks/: Image_analysis.ipynb  Untitled.ipynb  app.py  flask_application.ipynb  output.html  point_cloud_fusion.ipynb  point_cloud_vis.ipynb
bcpd-pp-nuvoscan/notebooks/templates/: index.html
(+206 files in other folders)
